hphp/hack/test/typecheck/nullsafe/nullsafe-prop-4.php
<?hh

class C {
  public int $x = 123;
}

function test(?C $c): void {
  $c?->x++;
}
